--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 35px;
+  padding: 5px 17px;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  outline: 0;
+  cursor: pointer;
+  transition: all 0.25s;
+}
+.btn:hover,
+.btn:focus {
+  opacity: 0.8;
+}
+.btn:active {
+  opacity: 0.4;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-secondary {
+  background: #eef2f5;
+  border-color: #eef2f5;
+}
+.btn-confirm {
+  color: #fff;
+  background: #10cd45;
+  border-color: #10cd45;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-text {
+  height: 35px;
+  padding: 5px 17px;
+  border-radius: 5px;
+  border: 1px solid #eef2f5;
+  font-size: 14px;
+  line-height: 17px;
+  outline: 0;
+  transition: all 0.25s;
+  box-sizing: border-box;
+}
+.input-text:hover,
+.input-text:focus {
+  border-color: #c6c9cc;
+}
+
+.form-error {
+  font-size: 13px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
