--- a/src/components/layouts/base-layout/base-layout.scss
+++ b/src/components/layouts/base-layout/base-layout.scss
@@ -3,5 +3,6 @@
 }
 .content {
   width: calc(100% - 250px);
-  padding: 55px 62px 45px 64px;
+  margin-left: 250px;
+  padding: 55px 62px 15px 64px;
 }
